# sqlike-db

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  TODO.txt  a.out  dev  grammar.txt  plan.txt
includes/: ast.hpp  code_generator.hpp  create_statement.hpp  database.hpp  executor.hpp  lexer.hpp  parser.hpp  schema.hpp  symbol_table.hpp  tokentype.hpp  typechecker.hpp
src/: create_statement.cpp  database.cpp  delete_statement.cpp  insert_statement.cpp  lexer.cpp  main.cpp  parser.cpp  schema.cpp  select_statement.cpp  typechecker.cpp  update_statement.cpp
tests/: create_table_test.cpp  delete_statement_test.cpp  drop_table_test.cpp  insert_statement_test.cpp  select_statement_test.cpp  update_statement_test.cpp
